Fix issue #1000 - Restore database with backup data in case of a failed upgrade